# opencode-harness-bridge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
command/: opencode-harness-bridge.md
docs/decisions/: 0001-4-tier-safety-model.md  0002-zero-runtime-deps.md
skill/harness-convert/: SKILL.md
src/opencode_harness_bridge/: __init__.py  __main__.py  cli.py  exceptions.py  models.py  sync.py
src/opencode_harness_bridge/audit/: classify.py  inventory.py
src/opencode_harness_bridge/converters/: __init__.py  claude_code_to_opencode.py  codex_to_opencode.py  shared.py
src/opencode_harness_bridge/safety/: tiers.py
tests/: conftest.py  test_claude_to_opencode_real.py  test_cli.py  test_cli_real.py  test_codex_to_opencode_real.py  test_converters.py  test_converters_shared.py  test_inventory_classify.py  test_inventory_codex.py  test_inventory_real.py  test_maintain.py  test_models.py  test_release_readiness.py  test_safety_tiers.py
tests/fixtures/: __init__.py
tests/fixtures/sample-claude-harness/: CLAUDE.local.md  CLAUDE.md
tests/fixtures/sample-claude-harness-malformed-settings/: CLAUDE.md
tests/fixtures/sample-claude-harness-malformed-settings/.claude/: settings.json
tests/fixtures/sample-claude-harness-with-secret/: CLAUDE.md
tests/fixtures/sample-claude-harness-with-secret/.claude/: settings.json
tests/fixtures/sample-claude-harness/.claude/: settings.json
tests/fixtures/sample-codex-harness/: AGENTS.md
tests/fixtures/sample-codex-harness-malformed-toml/: AGENTS.md
tests/fixtures/sample-codex-harness-with-secret/: AGENTS.md
tests/fixtures/sample-codex-harness/.codex/: config.toml
(+19 files in other folders)
